--- a/NetPowerMan/NetPowerMan.csproj
+++ b/NetPowerMan/NetPowerMan.csproj
@@ -257,6 +257,7 @@
     <Resource Include="logo.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Preview\Preview.png" />
     <Resource Include="lottie_sharp.ico" />
     <Content Include="Properties\AssemblyInfo.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
